--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Books</title>
-	<link href="/stylesheets/style.css" rel="stylesheet">
-</head>
-<body>
+doctype html
+head
+	title #{title}
+	link(href="/stylesheets/style.css",rel="stylesheet")
+body
 	block content
