--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -1,9 +1,8 @@
 extends layout.pug
 
 block content
-    body
         h1 #{title}
         include form
-        form(method="post" ,action="/books/8/delete" ,onsubmit="return confirm('Do you really want to delete this book?');")
+        form(method="post" ,action=`/books/${book.id}/delete` ,onsubmit="return confirm('Do you really want to delete this book?');")
             p
                 input(type="submit", value="Delete Book")
