--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,6 @@
 extends layout.pug
 
 block content
-        h1 Books
-        p
-            a(class="button", href="/books/new") Create New Book
         table
             thead
                 tr
@@ -11,11 +8,18 @@ block content
                     th  Author
                     th  Genre
                     th  Year
+                    th  Actions
             tbody
                 each book in books
                     tr
-                        td
-                            a(href=`/books/${book.id}`)  #{book.title}
+                        td  #{book.title}
                         td  #{book.author}
                         td  #{book.genre}
-                        td  #{book.year}               
+                        td  #{book.year}   
+                        td.actions
+                            div
+                                form(class="delete-form" method="post" ,action=`/books/${book.id}/delete` ,onsubmit="return confirm('Do you really want to delete this book?');")
+                                    button(type="submit") 
+                                        i(class="fas fa-trash-alt")
+                                a(href=`/books/${book.id}`)
+                                    i(class="fas fa-edit")          
