--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,5 +2,16 @@ doctype html
 head
 	title #{title}
 	link(href="/stylesheets/style.css",rel="stylesheet")
+	link(href="https://fonts.googleapis.com/css?family=Text+Me+One", rel="stylesheet")
+	link(rel="stylesheet",href="https://use.fontawesome.com/releases/v5.7.2/css/all.css",integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr",crossorigin="anonymous")
 body
-	block content
+	nav
+		h1 Books
+		ul
+			li
+				a(class="button",href="/books/new") Create New Book
+			li
+				a(class="button",href="/books/search") Search
+
+	main
+		block content
