--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,8 @@ body
 		h1 Books
 		ul.nav.justify-content-end
 			li.nav-item
+				a(class="button nav-link navbar-brand",href="/") Home
+			li.nav-item
 				a(class="button nav-link navbar-brand",href="/books/new") Create New Book
 			li.nav-item
 				a(class="button nav-link navbar-brand",href="/books/search") Search
