--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,8 +1,9 @@
 extends layout.pug
 
 block content
-    h1  Page Not Found
-    p   Sorry! We couldn't find the page you were looking for.
-    br
-    p
-        a(class="button" ,href="/") Home
+    div.not-found
+        h1  Page Not Found
+        p   Sorry! We couldn't find the page you were looking for.
+        br
+        p
+            a(class="button not-found" ,href="/") Home
