--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ head
 	link(rel="stylesheet",href="https://use.fontawesome.com/releases/v5.7.2/css/all.css",integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr",crossorigin="anonymous")
 	link(href="/stylesheets/style.css",rel="stylesheet")
 body
-	nav.navbar.sticky-top
+	nav(class="navbar sticky-top")
 		h1 Books
 		ul.nav.justify-content-end
 			li.nav-item
