--- a/views/form.pug
+++ b/views/form.pug
@@ -13,16 +13,16 @@ form(action=actionPath, method="post")
                         li  #{error.message}            
             p
                 label(for="title") Title
-                input(name="title", type="text", id="title" value=book.title)
+                input(name="title", type="text", id="title", required, value=book.title)
             p
                 label(for="author") Author
-                input(name="author",type="text",id="author" value=book.author)
+                input(name="author",type="text",id="author" ,required, value=book.author)
             p
                 label(for="genre") Genre
-                input(name="genre",type="text",id="genre"  value=book.genre)
+                input(name="genre",type="text",id="genre" , value=book.genre)
             p
                 label(for="year") Year
-                input(name="year",type="text",id="year" value=book.year)
+                input(name="year",type="text",id="year", value=book.year)
             div.form-buttons
                 input(type="submit",value=title)
                 a(class="button",href="/") Cancel
